--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
 		<meta name="theme-color" content="#ffffff">
-		<meta name="description" content="{{site.description}}">
+		<meta name="description" content="{{page.description}}">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
