--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,15 +6,15 @@
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
 		<meta name="theme-color" content="#ffffff">
-		<meta name="description" content="{{site.description}}">
+		<meta name="description" content="{{page.description}}">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
-		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-		<link rel="stylesheet" href="css/posts.nest.sass.css">
+		<link rel="icon" type="image/png" href="http://www.moonwards.com/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="http://www.moonwards.com/favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="http://www.moonwards.com/favicon-16x16.png" sizes="16x16">
+		<link rel="stylesheet" href="http://www.moonwards.com/css/posts.nest.sass.css">
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+<script type="text/javascript" src="http://www.moonwards.com/js/tooltipster.bundle.min.js"></script>
 <script>
 	 $(document).ready(function() {
 			 $('.tooltip').tooltipster({
@@ -27,15 +27,14 @@
 {%include obsolete-warning.html %}
 {%include nav.html%}
 	<header>
-		<div id="header">
    <p>
      What could be done if a group of nations was determined to
      colonize the Moon, and they based their decisions only on
      technical and economic merit?
    </p>
-		</div>
 	</header>
 <div class="container">
+
  <h1>{{page.title}}</h1>
 {{content}}
 </div>
