--- a/docs/css/posts.nest.sass.css
+++ b/docs/css/posts.nest.sass.css
@@ -9,7 +9,26 @@ html {
     html {
       background-size: 100% auto; } }
 
-/*All color, text styling, visual touches, and basic doc styles*/
+header {
+  background-color: #000;
+  background-image: url("http://www.moonwards.com/img/BlogHeaderOpt.svg") no-repeat fixed center;
+  background-size: contain;
+  margin-top: 33px;
+  width: 100%; }
+  header p {
+    padding: 8rem; }
+
+.container {
+  margin-left: 10%;
+  width: 70%;
+  max-width: 1000px;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+section {
+  padding: 1rem;
+  margin-top: 3rem;
+  margin-left: 4rem; }
+
 body, ul, figure {
   margin: 0; }
 
@@ -29,10 +48,6 @@ h1 {
   font-style: italic;
   font-size: 24px;
   line-height: 28px;
-  -webkit-align-self: center;
-  -moz-align-self: center;
-  align-self: center;
-  -ms-flex-item-align: center;
   padding: 15px 0 15px 45px;
   margin: 0;
   border-bottom: 1px solid #96912d; }
@@ -42,10 +57,6 @@ h2 {
   font-weight: 300;
   font-size: 20px;
   line-height: 24px;
-  -webkit-align-self: flex-end;
-  -moz-align-self: flex-end;
-  align-self: flex-end;
-  -ms-flex-item-align: end;
   padding: 15px 20px 12px 45px;
   margin: 0;
   border-bottom: 1px solid #96912d; }
@@ -55,10 +66,6 @@ h3 {
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  -webkit-align-self: flex-end;
-  -moz-align-self: flex-end;
-  align-self: flex-end;
-  -ms-flex-item-align: end;
   padding: 15px 4vw 0 8vw;
   margin: 0;
   border-bottom: 1px solid #96912d; }
@@ -69,11 +76,7 @@ h5 {
   line-height: 20px;
   font-size: 18px;
   padding: 4px 20px;
-  margin: 20px 0 5px 0;
-  -webkit-align-self: center;
-  -moz-align-self: center;
-  align-self: center;
-  -ms-flex-item-align: center; }
+  margin: 20px 0 5px 0; }
 
 figcaption {
   font-size: 0.8rem;
@@ -199,321 +202,6 @@ nav li:hover > ul {
   -webkit-flex-flow: column nowrap;
   -moz-flex-flow: column nowrap;
   flex-flow: column nowrap; }
-
-/*Block level elements, and non-text objects */
-.container {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-lines: multiple;
-  -moz-box-lines: multiple;
-  box-lines: multiple;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: end;
-  -moz-box-pack: end;
-  box-pack: end;
-  -webkit-justify-content: flex-end;
-  -moz-justify-content: flex-end;
-  -ms-justify-content: flex-end;
-  -o-justify-content: flex-end;
-  justify-content: flex-end;
-  -ms-flex-pack: end;
-  -webkit-box-align: start;
-  -moz-box-align: start;
-  box-align: start;
-  -webkit-align-items: flex-start;
-  -moz-align-items: flex-start;
-  -ms-align-items: flex-start;
-  -o-align-items: flex-start;
-  align-items: flex-start;
-  -ms-flex-align: start;
-  width: 100%; }
-
-section {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-flex: 3;
-  -moz-box-flex: 3;
-  box-flex: 3;
-  -webkit-flex: 3 0 350px;
-  -moz-flex: 3 0 350px;
-  -ms-flex: 3 0 350px;
-  flex: 3 0 350px;
-  -webkit-box-orient: vertical;
-  -moz-box-orient: vertical;
-  box-orient: vertical;
-  -webkit-box-direction: normal;
-  -moz-box-direction: normal;
-  box-direction: normal;
-  -webkit-flex-direction: column;
-  -moz-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-direction: column;
-  padding: 1rem;
-  margin-top: 3rem;
-  margin-left: 4rem; }
-
-section .learn {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-flex: 0;
-  -moz-box-flex: 0;
-  box-flex: 0;
-  -webkit-flex: 0 1 350px;
-  -moz-flex: 0 1 350px;
-  -ms-flex: 0 1 350px;
-  flex: 0 1 350px;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 90%; }
-
-aside {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  box-flex: 1;
-  -webkit-flex: 1 1 300px;
-  -moz-flex: 1 1 300px;
-  -ms-flex: 1 1 300px;
-  flex: 1 1 300px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: column nowrap;
-  -moz-flex-flow: column nowrap;
-  flex-flow: column nowrap;
-  -webkit-box-pack: start;
-  -moz-box-pack: start;
-  box-pack: start;
-  -webkit-justify-content: flex-start;
-  -moz-justify-content: flex-start;
-  -ms-justify-content: flex-start;
-  -o-justify-content: flex-start;
-  justify-content: flex-start;
-  -ms-flex-pack: start;
-  -webkit-box-align: stretch;
-  -moz-box-align: stretch;
-  box-align: stretch;
-  -webkit-align-items: stretch;
-  -moz-align-items: stretch;
-  -ms-align-items: stretch;
-  -o-align-items: stretch;
-  align-items: stretch;
-  -ms-flex-align: stretch;
-  margin-top: 4rem; }
-  @media only screen and (min-width: 1700px) {
-    aside {
-      flex: 2 0 400px; } }
-
-.outerDiv {
-  -moz-border-radius: 2rem;
-  -webkit-border-radius: 2rem;
-  -ms-border-radius: 2rem;
-  border-radius: 2rem;
-  background-color: rgba(50, 50, 0, 0.7); }
-
-.innerDiv {
-  -moz-border-radius: 1.5rem;
-  -webkit-border-radius: 1.5rem;
-  -ms-border-radius: 1.5rem;
-  border-radius: 1.5rem;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: column nowrap;
-  -moz-flex-flow: column nowrap;
-  flex-flow: column nowrap;
-  -webkit-box-align: end;
-  -moz-box-align: end;
-  box-align: end;
-  -webkit-align-items: flex-end;
-  -moz-align-items: flex-end;
-  -ms-align-items: flex-end;
-  -o-align-items: flex-end;
-  align-items: flex-end;
-  -ms-flex-align: end;
-  background-color: rgba(10, 10, 10, 0.7);
-  margin: 15px; }
-  .innerDiv p {
-    padding: 0.5rem 1.2rem;
-    margin: 0;
-    -webkit-align-self: center;
-    -moz-align-self: center;
-    align-self: center;
-    -ms-flex-item-align: center; }
-
-.pixWrap {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  -moz-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  margin: 15px; }
-  .pixWrap p {
-    margin: 5px;
-    padding: 10px; }
-
-.pixHeader {
-  background-color: rgba(10, 10, 10, 0.7);
-  border-radius: 15px 15px 0 0;
-  margin: 15px 15px 0 15px; }
-
-.pixBody {
-  background-color: rgba(10, 10, 10, 0.7);
-  border-radius: 0 0 15px 15px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  -moz-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  margin: 0 15px 15px 15px; }
-
-.pix {
-  margin: 15px;
-  -webkit-box-flex: auto;
-  -moz-box-flex: auto;
-  box-flex: auto;
-  -webkit-flex: auto;
-  -moz-flex: auto;
-  -ms-flex: auto;
-  flex: auto;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  border: 1px solid #50500f; }
-  .pix img {
-    width: 100%;
-    height: auto; }
-
-div .gallery {
-  -webkit-box-flex: auto;
-  -moz-box-flex: auto;
-  box-flex: auto;
-  -webkit-flex: auto;
-  -moz-flex: auto;
-  -ms-flex: auto;
-  flex: auto;
-  width: 500px;
-  margin: 20px; }
-  div .gallery img {
-    width: 100%;
-    height: auto; }
-
-.imgResize {
-  -webkit-box-flex: auto;
-  -moz-box-flex: auto;
-  box-flex: auto;
-  -webkit-flex: auto;
-  -moz-flex: auto;
-  -ms-flex: auto;
-  flex: auto;
-  -webkit-align-self: center;
-  -moz-align-self: center;
-  align-self: center;
-  -ms-flex-item-align: center; }
-  .imgResize img {
-    width: 90%;
-    height: auto; }
-
-.thumbs {
-  padding: 10px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  -moz-flex-flow: row wrap;
-  flex-flow: row wrap; }
-  .thumbs img {
-    padding: 10px;
-    flex: 0 1 auto; }
-
-.sideDiv {
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 1.5rem 0 0 1.5rem;
-  padding: 1rem; }
-  .sideDiv img {
-    width: 90%;
-    border: 1px solid #73730f; }
-
-.sidePairTop {
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 1.5rem 0 0 0;
-  padding: 1rem; }
-  .sidePairTop img {
-    width: 90%;
-    border: 1px solid #73730f; }
-
-.sidePairBottom {
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 0 0 0 1.5rem;
-  padding: 0 15px 15px 15px;
-  font-size: 0.8rem;
-  letter-spacing: 1px;
-  line-height: 1.1rem;
-  text-align: right; }
 
 /* This is the core CSS of Tooltipster */
 .tooltipster-base {
@@ -840,7 +528,3 @@ th {
 
 tr:nth-child(2n) {
   background: rgba(50, 50, 0, 0.7); }
-
-#header {
-  background: #000 url("img/BlogHeaderOpt.svg") no-repeat fixed center;
-  background-size: contain; }
