--- a/css/posts.nest.sass.css
+++ b/css/posts.nest.sass.css
@@ -9,20 +9,22 @@ html {
     html {
       background-size: 100% auto; } }
 
-header {
-  background-color: #000;
-  background-image: url("http://www.moonwards.com/img/BlogHeaderOpt.svg") no-repeat fixed center;
-  background-size: contain;
-  margin-top: 33px;
-  width: 100%; }
-  header p {
-    padding: 8rem; }
-
 .container {
   margin-left: 10%;
   width: 70%;
   max-width: 1000px;
-  background-color: rgba(0, 0, 0, 0.4); }
+  background-color: rgba(0, 0, 0, 0.4);
+  position: relative; }
+
+header {
+  background-color: #000;
+  background-image: url("http://www.moonwards.com/img/BlogHeaderOpt.svg") no-repeat fixed center;
+  background-size: contain;
+  position: absolute;
+  top: 33px;
+  width: 100%; }
+  header p {
+    padding: 8rem; }
 
 section {
   padding: 1rem;
