--- a/sass/_post-styles.sass
+++ b/sass/_post-styles.sass
@@ -1,17 +1,19 @@
-header
-  background-color: #000
-  background-image: url("http://www.moonwards.com/img/BlogHeaderOpt.svg") no-repeat fixed center
-  background-size: contain
-  margin-top: 33px
-  width: 100%
-  p
-    padding: 8rem
-
 .container
   margin-left: 10%
   width: 70%
   max-width: 1000px
   background-color: $tabBkgd
+  position: relative
+
+header
+  background-color: #000
+  background-image: url("http://www.moonwards.com/img/BlogHeaderOpt.svg") no-repeat fixed center
+  background-size: contain
+  position: absolute
+  top: 33px
+  width: 100%
+  p
+    padding: 8rem
 
 section
   padding: $mainPad
