--- a/docs/css/posts.nest.sass.css
+++ b/docs/css/posts.nest.sass.css
@@ -15,6 +15,8 @@ html {
   max-width: 1000px;
   background-color: rgba(0, 0, 0, 0.4);
   position: relative; }
+  .container p {
+    padding: 15px; }
 
 header {
   background-color: #000;
