--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -6,8 +6,6 @@ nav
   background-color: #000
   ul
     list-style-type: none
-    padding: 0
-    margin: 0
     background-color: #000
 
   a
@@ -24,21 +22,33 @@ nav
       background-color: inherit
 
 nav > ul
-  +display(flex)
-  +align-items(baseline)
-  +justify-content(flex-start)
-  +flex-flow(row nowrap)
+  box-sizing: border-box
   width: 100%
-  height: 33px
-  padding-left: 15px
+  padding: 5px 20px
+  position: absolute
+  top: 0
+
 
 
 nav > ul > li
-  +flex(1 1 100px)
+  display: inline
   font-size: 18px
   font-weight: 300
   padding: 5px
+  position: absolute
+  top: 0
 
+nav > ul > li:nth-child(1)
+  left: 0
+
+nav > ul > li:nth-child(2)
+  left: 25%
+
+nav > ul > li:nth-child(3)
+  left: 50%
+
+nav > ul > li:nth-child(4)
+  left: 75%
 
 /* Make dropdown menus:
   ul that is a CHILD of li which is a DESCENDENT of nav
@@ -50,18 +60,18 @@ nav li > ul
   padding: 10px
   text-align: center
   margin: 0
-
-nav li > ul li
-  +flex(1 1 auto)
-  font-size: 18px
-  font-weight: 300
-  padding: 5px
-
+  width: 90vw
 
 /* Statement applies only to
   child ul, only when li is hovered
 nav  li:hover > ul
   +display(flex)
   +align-items(flex-start)
-  +justify-content(flex-start)
-  +flex-flow(column nowrap)
+  +justify-content(center)
+  +flex-flow(row wrap)
+
+nav li > ul li
+  +flex(1 1 auto)
+  font-size: 18px
+  font-weight: 300
+  padding: 5px
